# basic_quantum_circuit_simulator_gui

./: README.md  basic_quantum_sim.py  pyproject.toml  requirements.txt
modules/: bloch.py  circuit.py  complex_.py  export_import.py  gates.py  qiskit_serdes.py  simgui.py  tooltip_gui.py
test/: balanced-Deutsch-Jozsa.json  constant-Deutsch-Jozsa.json  grovers-one-iteration.json  grovers-two-iter.json  qiskit-export-test.py  test.json
