[project]
name = "basic-quantum-simulator-gui"
version = "1.0.0"
description = "A quantum circuit simulator with an interactive graphical user interface built using Python and Tkinter. This simulator allows you to design, simulate, and visualize quantum circuits with multiple qubits and various quantum gates."
authors = [
    {name = "GentleClash",email = "ayushbajpai016@gmail.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "qutip (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
